# wro-arc-greenhouse-randomizer

./: README.md  package.json  webpack.config.js
generator/: CMakeLists.txt  ColorGenerator.hpp  FieldGenerator.cpp  FieldGenerator.hpp  FieldJsonSerializer.hpp  main.cpp  util.hpp  vector.hpp
generator/test/: CMakeLists.txt  test_ComplexShape.cpp  test_util.cpp
public/: bundle.js  bundle.js.map  index.html  style.css
scripts/: run-server.sh
src.transpiled/frontend/: debug_renderer.js  debug_renderer.js.map  get_field.js  get_field.js.map  main.js  main.js.map  qr_code_renderer.js  qr_code_renderer.js.map  renderer.js  renderer.js.map
src.transpiled/server/: app.js  app.js.map  generate_field.js  generate_field.js.map
src.transpiled/server/test/: generate_field.test.js  generate_field.test.js.map
src.transpiled/util/: color.js  color.js.map  encode_field.js  encode_field.js.map  field.js  field.js.map  random.js  random.js.map
src.transpiled/util/test/: color.test.js  color.test.js.map  encode_field.test.js  encode_field.test.js.map  field.test.js  field.test.js.map  mock_field.js  mock_field.js.map
src/frontend/: debug_renderer.js  get_field.js  main.js  pdf_generator.js  qr_code_renderer.js  renderer.js
src/frontend/test/: index.test.html
src/server/: app.js
src/util/: color.js  encode_field.js  field.js  random.js
src/util/test/: mock_field.js
